--- a/{{cookiecutter.project_repo_name}}/pyproject.toml.jinja2
+++ b/{{cookiecutter.project_repo_name}}/pyproject.toml.jinja2
@@ -35,7 +35,7 @@ Code = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.proje
 
 
 [tool.poetry.dependencies]
-python = ">=3.6"
+python = ">=3.7"
 xonsh = ">=0.9.20"
 
 [tool.poetry.dev-dependencies]
@@ -49,3 +49,25 @@ yapf = "^0.30.0" # can be used to format .xsh files with the special rules
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 {% endif %}
+
+[tool.isort]
+profile = "black"
+
+[tool.black]
+include = '\.pyi?$'
+force-exclude = '''
+/(
+    \.git
+  | \.hg
+  | \.mypy_cache
+  | \.pytest_cache
+  | \.tox
+  | \.vscode
+  | \.venv
+  | _build
+  | buck-out
+  | build
+  | dist
+  | disk-cache.sqlite3
+)/
+'''
