--- a/{{cookiecutter.project_repo_name}}/pyproject.toml.jinja2
+++ b/{{cookiecutter.project_repo_name}}/pyproject.toml.jinja2
@@ -36,10 +36,10 @@ Code = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.proje
 
 [tool.poetry.dependencies]
 python = ">=3.7"
-xonsh = ">=0.9.20"
+xonsh = ">=0.11"
 
 [tool.poetry.dev-dependencies]
-pytest = "^6.0"
+pytest = ">=6.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
